# HoustonV2

./: .gitignore  AlertPanel.cpp  AlertPanel.h  CMakeCache.txt  CMakeLists.txt  Component.h  ControlPanel.cpp  ControlPanel.h  LiveDataPanel.cpp  LiveDataPanel.h  Makefile  README.md  SerialHelper.h  Setting.cpp  Setting.h  TelemetryPanel.cpp  TelemetryPanel.h  Util.h  cmake_install.cmake  imgui.ini  main.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: Dashboard.h  Dispatcher.h  SerialHelper.h  Setting.h  Util.h  main.cpp  pch.h
src/components/: AlertPanel.cpp  AlertPanel.h  Component.h  ControlPanel.cpp  ControlPanel.h  FileUpload.cpp  FileUpload.h  LiveDataPanel.cpp  LiveDataPanel.h  TelemetryPanel.cpp  TelemetryPanel.h
src/consumer/: AlertConsumer.h  DataConsumer.h  LiveDataConsumer.h  QueueData.cpp  QueueData.h  TelemetryConsumer.h  TypedConsumer.h
src/dashboard/: COBS.c  COBS.h  Dashboard.c  Dashboard.h
src/producer/: DataProducer.h  SerialProducer.h
src/resource/: PSFR_CAN_Protocol_V5.json  imgui.ini
src/services/: DataProducer.h  Dispatcher.h  WebSocketProducer.cpp  WebSocketProducer.h
src/services/consumer/: DataConsumer.h  QueueData.cpp  QueueData.h
